Fixed style on mobile

--- a/src/App.less
+++ b/src/App.less
@@ -46,7 +46,7 @@ body {
 
     &::after {
         content: "";
-        min-width: 15px;
+        min-width: 25px;
     }
 }
 
