--- a/src/components/Common/FormControl/Input.less
+++ b/src/components/Common/FormControl/Input.less
@@ -3,6 +3,7 @@
     border: 0;
     border-radius: 2px;
     box-sizing: border-box;
+    -webkit-appearance: none;
     box-shadow: 0 0 0 2px #ebebeb;
     font-size: 16pt;
     outline: none;
