--- a/src/components/Common/FormControl/Select.less
+++ b/src/components/Common/FormControl/Select.less
@@ -1,10 +1,13 @@
 .Select {
-    padding: 10px 0;
+    padding: 10px 5px;
     border: 0;
     border-radius: 2px;
     box-sizing: border-box;
+    -webkit-appearance: none;
     box-shadow: 0 0 0 2px #ebebeb;
+    background-color: white;
     font-size: 16pt;
+    color: black;
     outline: none;
     cursor: pointer;
 
